サーバプログラム完成

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
         }
         </script>
     </head>
-    <body onLoad="updateLux('/lux', 'data')">
+    <body onLoad="updateLux('/distance', 'data')">
         <center>
         <div id = "data">test</div>
-        <input type="button" value="更新" onclick="updateLux('/lux', 'data')">
+        <input type="button" value="更新" onclick="updateLux('/distance', 'data')">
         </center>
     </body>
 </html>
